--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "module": "ES6",
-    "target": "es6",
+    "module": "commonjs",
+    "target": "es2015",
     "outDir": "submit",
     "downlevelIteration": true,
     "removeComments": true,
+    "lib": ["es6", "dom", "es2017"],
     "baseUrl": "."
   },
   "include": ["./questions"],
