--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "es2015",
     "outDir": "submit",
+    "sourceMap": true,
     "downlevelIteration": true,
     "removeComments": true,
     "lib": ["es6", "dom", "es2017"],
