--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2015",
-    "outDir": "submit",
+    "outDir": "./dist",
     "sourceMap": true,
     "downlevelIteration": true,
     "removeComments": true,
